[tool.poetry]
name = "roman-encode-decode"
version = "0.1.0"
description = ""
authors = ["Gregory Mirsky <6909025+gmirsky@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
emoji = "^2.8.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
emoji = "^2.8.0"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"
checkov = "^3.1.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"

